--- a/index.html
+++ b/index.html
@@ -78,10 +78,8 @@
             Hi! I&apos;m Dhivagar 
             <img src="./assets/hand-icon.png" alt="" class="w-6 mb-1" />
         </h3>
-        <h1 class="text-3xl sm:text-6xl lg:text-[66px] font-Ovo">frontend web developer From Chennai.</h1>
-        <p class="max-w-2xl mx-auto font-Ovo">I am a frontend developer from California, USA with 10 years of experience
-            in multiple companies like Microsoft, Tesla and Apple.</p>
-
+        <h1 class="text-3xl sm:text-6xl lg:text-[66px] font-Ovo">Frontend web developer From Chennai.</h1>
+        
         <div class="flex flex-col sm:flex-row items-center gap-4 mt-4">
             <a href="#contact"
                 class="px-10 py-2.5 border rounded-full bg-gradient-to-r from-[#b820e6] to-[#da7d20] text-white flex items-center gap-2 dark:border-transparent">
