Revise personal introduction in index.html
Updated personal description to reflect current skills and experience in WordPress development and web design.

--- a/index.html
+++ b/index.html
@@ -107,9 +107,11 @@
                 </div>
             </div>
             <div class="flex-1">
-                <p class="mb-10 max-w-2xl font-Ovo">I am an experienced Frontend Developer with over a decade of
-                    professional expertise in the field. Throughout my career, I have had the privilege of collaborating
-                    with prestigious organizations, contributing to their success and growth.</p>
+                <p class="mb-10 max-w-2xl font-Ovo">I am a WordPress Developer and Web Designer with hands-on experience in building, customizing, and maintaining responsive websites. I specialize in WordPress development using Divi Builder, Divi Supreme, and Elementor, creating modern, user-friendly designs that align with business and educational goals.
+
+I have worked on live production websites such as RK Vision Academy, where I handled complete website design, content management, multimedia integration, and ongoing maintenance. My work focuses on clean UI, responsive layouts, performance optimization, and user experience across all devices.
+
+I also provide WooCommerce setup, payment gateway integration, and hourly website support, making me ideal for both full projects and long-term maintenance work. I am committed to delivering reliable, high-quality solutions with clear communication and efficient use of time.</p>
                 <ul class="grid grid-cols-1 sm:grid-cols-3 gap-6 max-w-2xl">
                     <li
                         class="border border-gray-300 dark:border-white/30 rounded-xl p-6 cursor-pointer hover:bg-lightHover hover:-translate-y-1 duration-500 hover:shadow-black dark:hover:shadow-white/80 dark:hover:bg-darkHover/50">
