--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@ I also provide WooCommerce setup, payment gateway integration, and hourly websit
     <div id="contact"
         class="w-full px-[12%] py-10 scroll-mt-20 bg-[url('./assets/footer-bg-color.png')] bg-no-repeat bg-[length:90%_auto] bg-center dark:bg-none">
         <h4 class="text-center mb-2 text-lg font-Ovo">Connect with me</h4>
-        <h2 class="text-center text-5xl font-Ovo">Get in touch</h2>
+        <h2 class="text-center text-5xl font-Ovo">Get in touch with Whats app </h2>
+        <h3 class="text-center text-5xl font-Ovo">+91 73584 04880 </h3>
         <p class="text-center max-w-2xl mx-auto mt-5 mb-12 font-Ovo">I'd love to hear from you! If you have any
             questions, comments or feedback, please use the form below.
         </p>
