--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
             class="hidden md:flex items-center gap-6 lg:gap-8 rounded-full px-12 py-3 bg-white shadow-sm bg-opacity-50 font-Ovo dark:border dark:border-white/30 dark:bg-transparent ">
             <li><a class='hover:text-gray-500 dark:hover:text-gray-300 transition' href="#top">Home</a></li>
             <li><a class='hover:text-gray-500 dark:hover:text-gray-300 transition' href="#about">About me</a></li>
-            <li><a class='hover:text-gray-500 dark:hover:text-gray-300 transition' href="#services">Services</a></li>
             <li><a class='hover:text-gray-500 dark:hover:text-gray-300 transition' href="#work">My Work</a></li>
             <li><a class='hover:text-gray-500 dark:hover:text-gray-300 transition' href="#contact">Contact me</a></li>
         </ul>
@@ -85,7 +84,7 @@
                 contact me <img src="./assets/right-arrow-white.png" alt="" class="w-4" />
             </a>
 
-            <a href="./assets/dev-icon.png" download
+            <a href="./assets/Dhivagar_WordPress_Developer_1_Page.pdf" download
                 class="px-10 py-2.5 rounded-full border border-gray-300 dark:border-white/25 hover:bg-slate-100/70 dark:hover:bg-darkHover flex items-center gap-2 bg-white dark:bg-transparent dark:text-white">
                 my resume <img src="./assets/download-icon.png" alt="" class="w-4 dark:invert" />
             </a>
