--- a/index.html
+++ b/index.html
@@ -165,8 +165,7 @@ I also provide WooCommerce setup, payment gateway integration, and hourly websit
     <div id="work" class="w-full px-[12%] py-10 scroll-mt-20">
         <h4 class="text-center mb-2 text-lg font-Ovo">My portfolio</h4>
         <h2 class="text-center text-5xl font-Ovo">My latest work</h2>
-        <p class="text-center max-w-2xl mx-auto mt-5 mb-12 font-Ovo">Welcome to my web development portfolio! Explore a
-            collection of projects showcasing my expertise in front-end development.</p>
+        <p class="text-center max-w-2xl mx-auto mt-5 mb-12 font-Ovo">Step into my web development portfolio and discover projects that highlight my front-end expertise and creativity.</p>
         <div class="grid grid-cols-auto my-10 gap-5 dark:text-black">
             <div class="aspect-square bg-no-repeat bg-cover bg-center rounded-lg relative cursor-pointer group"
                 style="background-image: url('./assets/work-1.png');">
