--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ I also provide WooCommerce setup, payment gateway integration, and hourly websit
                     class="bg-white w-10/12 rounded-md absolute bottom-5 left-1/2 -translate-x-1/2 py-3 px-5 flex items-center justify-between duration-500 group-hover:bottom-7">
                     <div>
                         <h2 class="font-semibold">Responsive Animation </h2>
-                        <p class="text-sm text-gray-700">mobile app</p>
+                        <p class="text-sm text-gray-700">Web App</p>
                     </div>
                     <div
                         class="border rounded-full border-black w-9 aspect-square flex items-center justify-center shadow-[2px_2px_0_#000] group-hover:bg-lime-300 transition">
@@ -224,8 +224,7 @@ I also provide WooCommerce setup, payment gateway integration, and hourly websit
                 </div>
             </div>
         </div><a href="#"
-            class="w-max flex items-center justify-center gap-2 text-gray-700 border border-gray-300 dark:border-white/25 hover:bg-slate-100/70 dark:hover:bg-darkHover rounded-full py-2 px-8 mx-auto my-20 duration-300 dark:text-white">Show
-            more<img src="./assets/right-arrow-bold.png" alt="" class="w-4 dark:hidden"><img
+            class="w-max flex items-center justify-center gap-2 text-gray-700 border border-gray-300 dark:border-white/25 hover:bg-slate-100/70 dark:hover:bg-darkHover rounded-full py-2 px-8 mx-auto my-20 duration-300 dark:text-white">New Project<img src="./assets/right-arrow-bold.png" alt="" class="w-4 dark:hidden"><img
                 src="./assets/right-arrow-bold-dark.png" alt="" class="w-4 hidden dark:block"></a>
     </div>
 
