Update header and add skills and projects sections

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             Hi! I&apos;m Dhivagar 
             <img src="./assets/hand-icon.png" alt="" class="w-6 mb-1" />
         </h3>
-        <h1 class="text-3xl sm:text-6xl lg:text-[66px] font-Ovo">Frontend web developer From Chennai.</h1>
+        <h1 class="text-3xl sm:text-6xl lg:text-[66px] font-Ovo">Frontend web Developer From Chennai.</h1>
         
         <div class="flex flex-col sm:flex-row items-center gap-4 mt-4">
             <a href="#contact"
@@ -90,6 +90,23 @@
             </a>
         </div>
     </div>
+
+    <h2 class="text-4xl font-Ovo mb-6">Skills</h2>
+
+<ul class="grid grid-cols-2 sm:grid-cols-3 gap-4 font-Ovo text-gray-700 dark:text-white/80">
+  <li>WordPress Development</li>
+  <li>Divi Builder & Divi Supreme</li>
+  <li>Elementor</li>
+  <li>WooCommerce</li>
+  <li>Payment Gateway Integration</li>
+  <li>HTML & CSS</li>
+  <li>Responsive Web Design</li>
+  <li>Website Maintenance</li>
+  <li>Adobe Photoshop</li>
+  <li>Adobe Premiere Pro</li>
+  <li>React JS (Learning)</li>
+</ul>
+
 
     <!-- ----- about me section ------ -->
     <div id="about" class="w-full px-[12%] py-10 scroll-mt-20">
@@ -161,6 +178,25 @@ I also provide WooCommerce setup, payment gateway integration, and hourly websit
         </div>
     </div>
 
+    <h2 class="text-4xl font-Ovo mb-6">Projects</h2>
+
+<div class="mb-8">
+  <h3 class="text-xl font-semibold">RK Vision Academy – Educational Website</h3>
+  <p class="text-sm text-gray-600">WordPress • Divi Builder • Content Management</p>
+  <p class="mt-2 font-Ovo text-gray-700 dark:text-white/80">
+    Developed and maintained an educational website focused on Science subjects. 
+    Worked on layout design, content organization, video embedding, and regular updates to improve usability and learning experience.
+  </p>
+</div>
+
+<div class="mb-8">
+  <h3 class="text-xl font-semibold">WordPress Customization & Maintenance</h3>
+  <p class="text-sm text-gray-600">Divi • Elementor • WooCommerce</p>
+  <p class="mt-2 font-Ovo text-gray-700 dark:text-white/80">
+    Provided ongoing WordPress support including layout fixes, responsiveness improvements, WooCommerce setup, and payment gateway integration on an hourly basis.
+  </p>
+</div>
+
     <!-- My Work Section -->
     <div id="work" class="w-full px-[12%] py-10 scroll-mt-20">
         <h4 class="text-center mb-2 text-lg font-Ovo">My portfolio</h4>
@@ -227,6 +263,18 @@ I also provide WooCommerce setup, payment gateway integration, and hourly websit
             class="w-max flex items-center justify-center gap-2 text-gray-700 border border-gray-300 dark:border-white/25 hover:bg-slate-100/70 dark:hover:bg-darkHover rounded-full py-2 px-8 mx-auto my-20 duration-300 dark:text-white">New Project<img src="./assets/right-arrow-bold.png" alt="" class="w-4 dark:hidden"><img
                 src="./assets/right-arrow-bold-dark.png" alt="" class="w-4 hidden dark:block"></a>
     </div>
+
+
+    <h2 class="text-4xl font-Ovo mb-6">What I Offer</h2>
+
+<ul class="list-disc ml-6 font-Ovo text-gray-700 dark:text-white/80">
+  <li>WordPress Website Development</li>
+  <li>Divi & Elementor Customization</li>
+  <li>WooCommerce Store Setup</li>
+  <li>Payment Gateway Integration</li>
+  <li>Website Redesign & Bug Fixes</li>
+  <li>Hourly Website Maintenance & Support</li>
+</ul>
 
     <!-- Contact me section -->
     <div id="contact"
