--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </a>
         </div>
     </div>
-<div class="o1">
+<div class="o1"  div class="o1" text-center mx-auto px-[12%] py-10">
     <h2 class="text-4xl font-Ovo mb-6">Skills</h2>
 
 <ul class="grid grid-cols-2 sm:grid-cols-3 gap-4 font-Ovo text-gray-700 dark:text-white/80">
